<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:onClick="floatButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/firstQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_question"
                android:textColor="#DFD4D4" />

            <RadioGroup
                android:id="@+id/idGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/idRafael"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_response" />

                <RadioButton
                    android:id="@+id/idOhata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_response2" />

                <RadioButton
                    android:id="@+id/idLuciano"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_response3" />

                <RadioButton
                    android:id="@+id/idEliney"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_response4" />

                <RadioButton
                    android:id="@+id/idWillian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_response5" />

            </RadioGroup>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>